GitVersion1/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_External_Id__c</fullName>
        <label>Account External Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Big_Commerce__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be used for BigCommerce Integration</description>
        <label>Big Commerce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CPN - France</fullName>
                </value>
                <value>
                    <fullName>CPN - Brazil</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Philippines</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>CQN - Canada</fullName>
                </value>
                <value>
                    <fullName>CQN - US</fullName>
                </value>
                <value>
                    <fullName>Spain Mila</fullName>
                </value>
                <value>
                    <fullName>CPN - India</fullName>
                </value>
                <value>
                    <fullName>CPN - Poland</fullName>
                </value>
                <value>
                    <fullName>CFN - China</fullName>
                </value>
                <value>
                    <fullName>Vietnam</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFR_In_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to check whether the contact record is already in progress or not</description>
        <label>CFR In Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CFR_USER_TYPE__c</fullName>
        <description>This field is used to store the value of CFR type field</description>
        <label>CFR USER TYPE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFR_contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field holds the value for CFR contact value</description>
        <label>CFR Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Account_Number__c</fullName>
        <description>This field is used to store dealer number on contact level</description>
        <formula>IF(Dealer_Contact__c == True, Account.Dealer_External_ID__c, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Text__c</fullName>
        <label>Email Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flip_a_switch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for manually setting product offering switch</description>
        <label>Product Offering Switch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flow_Name__c</fullName>
        <formula>FirstName + &quot; &quot; + LastName + &quot;–&quot; + Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flow Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Truck Salesman</fullName>
                </value>
                <value>
                    <fullName>Sales Representative</fullName>
                </value>
                <value>
                    <fullName>Vet</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Nutritionist</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Modified_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_Classification__c</fullName>
        <label>Marketing Classification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Business_Unit__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Approval for personal data processing</fullName>
                </value>
                <value>
                    <fullName>Approval for marketing activities</fullName>
                </value>
                <value>
                    <fullName>Approval for sharing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_First__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Labyrinth Mobile Sync</description>
        <label>Mobile First</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Method__c</fullName>
        <label>Preferred Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Language__c</fullName>
        <label>Primary Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Chinese (Mandarin)</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Estonian</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Latvian</fullName>
                </value>
                <value>
                    <fullName>Lithuanian</fullName>
                </value>
                <value>
                    <fullName>Maltese</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Romanian</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Slovak</fullName>
                </value>
                <value>
                    <fullName>Slovenian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Swedish </fullName>
                </value>
                <value>
                    <fullName>Turkish</fullName>
                </value>
                <value>
                    <fullName>Ukrainian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Offering_Status__c</fullName>
        <description>This field is used to store the Product offering flag on contact level</description>
        <formula>IF(Flip_a_switch__c == False &amp;&amp; Dealer_Contact__c == True, IMAGE(&quot;https://cargill18--c.na55.content.force.com/servlet/servlet.ImageServer?id=015f1000002wNbk&amp;oid=00Dn00000000mwU&amp;lastMod=1538037971000&quot;, &quot;Green&quot;), 
IF (Flip_a_switch__c == True &amp;&amp; Dealer_Contact__c == True, IMAGE(&quot;https://cargill18--c.na55.content.force.com/servlet/servlet.ImageServer?id=015f1000002wNbp&amp;oid=00Dn00000000mwU&amp;lastMod=1538037995000&quot;, &quot;Red&quot;),&apos;&apos;))</formula>
        <label>Product Offering Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <description>This field is used for mapping the request object status field in contact level</description>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted For Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Saleslogic_Id__c</fullName>
        <label>Saleslogic Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Secondary_Language__c</fullName>
        <label>Secondary Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Chinese (Mandarin)</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Estonian</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Latvian</fullName>
                </value>
                <value>
                    <fullName>Lithuanian</fullName>
                </value>
                <value>
                    <fullName>Maltese</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Romanian</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Slovak</fullName>
                </value>
                <value>
                    <fullName>Slovenian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Swedish </fullName>
                </value>
                <value>
                    <fullName>Turkish</fullName>
                </value>
                <value>
                    <fullName>Ukrainian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>uf__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uf__Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <group>All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Contacts_Outlook_created</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>rinte</value>
        </filters>
        <label>All Contacts Outlook created</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>France</roleAndSubordinates>
            <roleAndSubordinates>Poland_Superuser</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Contacts_Outlook_created_non_Riva</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>rinte</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>!!!Riva,!!! Outlook</value>
        </filters>
        <label>All Contacts Outlook created non Riva</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>France</roleAndSubordinates>
            <roleAndSubordinates>Poland_MasterData_DataSteward</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Contacts_non_Outlook</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>notEqual</operation>
            <value>rinte</value>
        </filters>
        <label>All Contacts non Outlook</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>France</roleAndSubordinates>
            <roleAndSubordinates>Poland_MasterData_DataSteward</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Contacts_non_Outlook_PL</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>notEqual</operation>
            <value>rinte</value>
        </filters>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Poland</value>
        </filters>
        <label>All Contacts non Outlook PL</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Poland_MasterData_DataSteward</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Contacts_vietnam</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Tất cả Liên hệ</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Vietnam</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>France</roleAndSubordinates>
            <roleAndSubordinates>Poland_MasterData_DataSteward</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyContacts1</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <group>All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyContacts_vietnam</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>Địa chỉ liên lạc của tôi</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Vietnam</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>France</roleAndSubordinates>
            <roleAndSubordinates>Poland_Superuser</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>To_Be_Synced</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Mobile_First__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Mobile_First__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Poland,US</value>
        </filters>
        <label>To Be Synced</label>
        <language>en_US</language>
        <sharedTo>
            <group>Data_Steward_Poland</group>
            <group>Data_Steward_US</group>
        </sharedTo>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>External_ID_cannot_be_changed</fullName>
        <active>true</active>
        <description>External Id cannot be changed and should come only by Integration (from external system)</description>
        <errorConditionFormula>IF( 
AND(CONTAINS($User.Profile_Name__c, &quot;Data Steward&quot;), ISCHANGED( External_Id__c )) , true, false)</errorConditionFormula>
        <errorMessage>External Id cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>First_Name_Mandatory</fullName>
        <active>false</active>
        <description>First Name should be mandatory for Poland and US profiles</description>
        <errorConditionFormula>AND(OR(IF( $Profile.Name = $Label.Sales_Professional_PolandProfile_Name,true,false), IF($Profile.Name = $Label.Sales_Professional_USProfile_Name,true,false),IF($Profile.Name = $Label.Sales_Professional_CanadaProfile_Name,true,false), IF(CASESAFEID($User.Id) = $Label.Integrationuserid,true,false),IF( $Profile.Name=$Label.Data_Steward_Global_US ,true,false), IF($Profile.Name = $Label.Data_Steward_Poland ,true,false), IF($Profile.Name = $Label.Data_Steward_Canada ,true,false)), IF(ISBLANK(FirstName),true,false))</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>First Name is Mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Match_Business_Unit_of_User</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
$Setup.Validation_Rule_Settings__c.Contact__c, 
ISNEW(), 
NOT(TEXT( Business_Unit__c ) = TEXT($User.Business_Unit__c)) 
)</errorConditionFormula>
        <errorMessage>Business Unit must match current user&apos;s Business Unit.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mobile_First_Flag_Cannot_be_changed</fullName>
        <active>false</active>
        <description>SP are not allowed to edit the Mobile first Flag.</description>
        <errorConditionFormula>OR( IF(AND(ISNEW(),Mobile_First__c = false,OR($Profile.Name = &apos;Sales Professional - Poland&apos;, $Profile.Name =&apos;Sales Professional - Global (US)&apos;)),true,false) ,IF( AND(OR($Profile.Name = &apos;Sales Professional - Poland&apos;, $Profile.Name =&apos;Sales Professional - Global (US)&apos;),ISCHANGED(Mobile_First__c)), true,false))</errorConditionFormula>
        <errorMessage>You do not have permission to edit Mobile First flag.</errorMessage>
    </validationRules>
</CustomObject>